# hajimi_hissing

./: CMakeLists.txt  README.md  rec.qrc  show_pic.cpp  show_pic.h  widget.cpp  widget.h
